# midos-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  glama.json  llms-install.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: midos-ci.yml
deploy_logs/: DEPLOY_LOG.txt
hive_commons/: README.md  __init__.py  pyproject.toml
hive_commons/src/hive_commons/: __init__.py  circuit_breaker.py  config.py  semantic_cache.py  vector_store.py
hive_commons/src/hive_commons/core/: hive_protocol.py  neural_stream.py
knowledge/EUREKA/: EUREKA_CATALOG.md  INDEX.md
knowledge/chunks/: 3d_printing_spring_2026_landscape.md  INDEX.md  MCP_CONFIG_ACTION_PLAN_2026.md  MCP_SECURITY_THREAT_MODEL_2026.md  a2a_protocol_agent_interoperability_2026.md  aaif_governance_tracking_2026.md  agentic_chunking_patterns_2026-02-10.md  ai_cli_ide_catalog_2026-02-12.md  ai_code_review_tools_landscape_2026.md  ai_coding_tools_comparison_2026.md  ai_model_catalog_2026-02-12.md  ai_myth_inventory_2026.md  anime_character_design_systems_2026-02-12.md  anime_style_rendering_implementation_2026-02-13.md  anthropic_hackathon_2026_research.md  architecture_module_boundaries_layer_model_2026-02-15.md  astro4_content_collections_advanced_2026-02-10.md  astro4_harvest_2026-02-10.md  astro4_migration_guide_2026-02-10.md  astro4_quick_start_2026-02-10.md  astro4_testable_examples_2026-02-10.md  case_study_bare_metal_firmware_fsm_appliance_control_2026-02-14.md  case_study_flask_whatsapp_api_silent_failure_railway_2026-02-14.md  case_study_pricing_web_development_seo_services_2026-02-14.md  claude_code_advanced_workflows_2026.md  claude_code_plugin_architecture_specification_2026-02-14.md  claude_code_plugin_competitive_landscape_analysis_2026-02-14.md  claude_code_plugin_development_patterns_architecture_2026-02-14.md  claude_code_plugin_marketplace_distribution_guide_2026-02-14.md  claude_code_plugin_mcp_integration_patterns_2026-02-14.md  fastapi_modern_patterns_2026-02-10.md  fastapi_pydantic_v2_migration_harvest_report_2026-02-10.md  fastapi_redis_caching_patterns_2026.md  github_actions_ci_implementation_2026.md  github_hesreallyhim_analysis_2026-02-10.md  https_tls_deployment_2026.md  (+59 more)
tests/: test_e2e_tiers.py
web/: astro.config.mjs  package-lock.json  package.json
(+104 files in other folders)
