[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midos"
version = "2026.2.20"
description = "MCP Community Library — Knowledge base, research engine, and developer tools"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "MidOS Contributors" }
]
keywords = ["mcp", "knowledge-base", "ai-tools", "research"]

dependencies = [
    "structlog>=25.5.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "lancedb>=0.29.0,<0.30.0",
    "google-genai>=1.0.0",
    "pydantic>=2.12.5",
    "fastmcp>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "pytest-asyncio>=0.23.0",
]
ingestion = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
]
community = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
video = [
    "yt-dlp>=2024.1.0",
    "youtube_transcript_api>=0.6.0",
    "pdfplumber>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "verify_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["modules", "hive_commons"]
